--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
 .App{
+  margin : 0 5px;
   display: grid;
+  grid-template-areas: 
+  "h h"
+  "t1 t2"
+  "f f";
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 10px;
+  height: 100%;
 }
