--- a/src/components/NetworkChart/NetworkChart.css
+++ b/src/components/NetworkChart/NetworkChart.css
@@ -1,5 +1,15 @@
 .NetworkChart{
-    width: 600px;
-    height: 350px;
     border: 1px solid black ;
+    grid-area: t2;
+    padding: 10px;
+    background-color: rgb(129, 129, 129,0.4);
+    border-radius: 5px;
+}
+
+.NetworkChart__title{
+    text-align: center;
+}
+
+.NetworkChart__chart{
+    border: 1px ridge black
 }
